8321219: runtime/jni/FastGetField: assert(is_interpreted_frame()) failed: interpreted frame expected